# ChangeLog for dev-ruby/zentest
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.46 2008/12/26 15:51:02 armin76 Exp $

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> zentest-3.11.0.ebuild:
  ia64 stable wrt #250348

  20 Dec 2008; Markus Meier <maekke@gentoo.org> zentest-3.11.0.ebuild:
  amd64/x86 stable, bug #250348

  14 Dec 2008; nixnut <nixnut@gentoo.org> zentest-3.11.0.ebuild:
  Stable on ppc wrt bug 250348

  12 Dec 2008; Hans de Graaff <graaff@gentoo.org> -zentest-3.9.3.ebuild,
  -zentest-3.10.0.ebuild:
  Remove old versions

  10 Dec 2008; Ferris McCormick <fmccor@gentoo.org> zentest-3.11.0.ebuild:
  Add ~sparc keyword, part of Bug #250348.

  09 Dec 2008; Brent Baude <ranger@gentoo.org> zentest-3.11.0.ebuild:
  Marking zentest-3.11.0 ppc64 for bug 250348

  26 Oct 2008; Hans de Graaff <graaff@gentoo.org> -zentest-3.6.1.ebuild,
  -zentest-3.8.0.ebuild, -zentest-3.9.2.ebuild:
  Remove old versions

*zentest-3.11.0 (26 Oct 2008)

  26 Oct 2008; Hans de Graaff <graaff@gentoo.org> +zentest-3.11.0.ebuild:
  Version bump with many small bug fixes and enhancements.

*zentest-3.10.0 (18 Jun 2008)

  18 Jun 2008; Hans de Graaff <graaff@gentoo.org> +zentest-3.10.0.ebuild:
  Version bump: improved multiruby support, minor bugfixes.

*zentest-3.9.3 (12 Jun 2008)

  12 Jun 2008; Hans de Graaff <graaff@gentoo.org> +zentest-3.9.3.ebuild:
  Version bump

  25 Apr 2008; Hans de Graaff <graaff@gentoo.org> zentest-3.9.2.ebuild:
  Zentest needs hoe 1.5.1

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> zentest-3.9.1.ebuild:
  ia64 stable wrt #217389

  13 Apr 2008; Markus Rothe <corsair@gentoo.org> zentest-3.9.1.ebuild:
  Stable on ppc64; bug #217389

  12 Apr 2008; Dawid Węgliński <cla@gentoo.org> zentest-3.9.1.ebuild:
  Stable on x86 (bug #217389)

  12 Apr 2008; nixnut <nixnut@gentoo.org> zentest-3.9.1.ebuild:
  Stable on ppc wrt bug 217389
