@@ -1,4 +1,6 @@
 DIST ZenTest-3.11.0.gem 84480 RMD160 1f232061ebd25b7631b0eaabd4d86af69bfc12fe SHA1 a3a61957d354f171f169a8ac6bd6c07ecda83749 SHA256 e703711069ce6d2bf2fa2767f6e8b64c0b7d83c3abc824c74717359ec51dc8e1
+DIST ZenTest-3.11.1.gem 84480 RMD160 13eb17c0cc9caf8b6a8dd303120997d12d89dc68 SHA1 ec86404cfb43ea59d2297ef3866741a903ad61e8 SHA256 40802ee264ab29f5962392074f4ad0320c2d1c738d81c3f032d204d975bd6cba
 EBUILD zentest-3.11.0.ebuild 641 RMD160 d3a7cb231f4aad2c342b74d85add0510f32ab84f SHA1 6dc68dfd106faed5828ce2cd3456fc92c01b1ed1 SHA256 097a1ca513672bc14bcb08ac682c8c56f9fc5e7ce44a92bfd0fa9eae319a996b
-MISC ChangeLog 6434 RMD160 7ce6ad0ca7e9137539d45af29ccb63a40156e003 SHA1 3d2166291dcd10c1e46616d1300e5c155ab105a6 SHA256 641e782da4599d41b3e4a84386b3ca824bb285240e4b8582fa43d0b18a7ea87b
+EBUILD zentest-3.11.1.ebuild 640 RMD160 683785cc1222d87511989475be082dade26a60e8 SHA1 9a313758b2dcb466e2dfd9e340a6e11b6e19e047 SHA256 2d92cad5498fd6ff3b405a30f13877cd055699decd411092ef3ca0820d515dbd
+MISC ChangeLog 6581 RMD160 8f488796a676e41d2de0fb11448eee805e0f893d SHA1 3d0febc834f29811b359421959d7facac10b26fc SHA256 a29d1c50bb23cf7c05b5b81b06bf340fcff7a205cd27277afc4cd26b25ca1607
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
